[gd_scene load_steps=5 format=2]

[ext_resource path="res://Louis George Cafe.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://font.res" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="Menu" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.25098, 0.47451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PullMenu" type="Button" parent="."]
anchor_left = 0.498
anchor_top = 0.92
anchor_right = 0.498
anchor_bottom = 0.92
margin_left = -67.4401
margin_top = -22.4
margin_right = 67.5599
margin_bottom = 22.6
focus_mode = 0
custom_fonts/font = SubResource( 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Pull Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.498
anchor_top = 0.92
anchor_right = 0.498
anchor_bottom = 0.92
margin_left = -597.44
margin_top = -22.4
margin_right = -462.44
margin_bottom = 22.6
focus_mode = 0
custom_fonts/font = SubResource( 1 )
action_mode = 0
enabled_focus_mode = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostBG" type="ColorRect" parent="Cost"]
margin_left = 730.0
margin_top = 640.0
margin_right = 770.0
margin_bottom = 685.0
rect_scale = Vector2( 3.37296, 1.04009 )
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostBG2" type="ColorRect" parent="Cost"]
margin_left = 880.0
margin_top = 640.0
margin_right = 900.0
margin_bottom = 685.0
rect_scale = Vector2( 3.37296, 1.04009 )
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostText" type="Label" parent="Cost"]
margin_left = 769.045
margin_top = 649.4
margin_right = 828.045
margin_bottom = 677.4
custom_fonts/font = ExtResource( 3 )
text = "Cost:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostNumber" type="Label" parent="Cost"]
margin_left = 893.636
margin_top = 649.178
margin_right = 933.636
margin_bottom = 677.178
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="Gems" type="Control" parent="."]
margin_left = 294.531
margin_top = -611.31
margin_right = 334.531
margin_bottom = -571.31
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemsBG" type="ColorRect" parent="Gems"]
margin_left = 730.0
margin_top = 640.0
margin_right = 770.0
margin_bottom = 685.0
rect_scale = Vector2( 3.37296, 1.04009 )
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemsBG2" type="ColorRect" parent="Gems"]
margin_left = 880.0
margin_top = 640.0
margin_right = 900.0
margin_bottom = 685.0
rect_scale = Vector2( 3.37296, 1.04009 )
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemsText" type="Label" parent="Gems"]
margin_left = 761.928
margin_top = 649.441
margin_right = 833.928
margin_bottom = 677.441
custom_fonts/font = ExtResource( 3 )
text = "Gems:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemsNumber" type="Label" parent="Gems"]
margin_left = 883.0
margin_top = 649.31
margin_right = 946.0
margin_bottom = 677.31
custom_fonts/font = ExtResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PullMenu" to="." method="_on_PullMenu_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_PullMenu2_pressed"]
